# kaggle-s6e1-challenge

./: GEMINI.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/exploratory/: 0.01-rab-eda-target.ipynb  0.02-rab-eda-features.ipynb  0.03-rab-feature-engineering.ipynb
playground_series_s6e1_kaggle/: __init__.py  dataset.py  features.py  plots.py
playground_series_s6e1_kaggle/modeling/: predict.py  train.py
references/: CHALLENGE.md  PATTERNS.md
reports/: 0_01_rab_raw_features_eda.py
