[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "playground_series_s6e1_kaggle"
version = "0.0.1"
description = "Kaggle Playground Series Season 6 Episode 1"
authors = [
  { name = "Rebeca Bivar" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["playground_series_s6e1_kaggle"]
force_sort_within_sections = true


